# Software-Development-HW

./: README.md  activity.drawio  algorithms-description.md  requirements.md
.github/workflows/: ci.yml
docker-images/alpine/: Dockerfile
docker-images/fedora/: Dockerfile
docker-images/ubuntu/: Dockerfile
docs/: algorithms-description.md  architecture.md  comparison-test.md  experimental_environment.md
docs/diagrams/: use-case.drawio
solution/: CMakeLists.txt
solution/include/: AStarAlgorithm.h  BellmanFordAlgorithm.h  BiDijkstraAlgorithm.h  BruteForceAlgorithm.h  DijkstraAlgorithm.h  Graph.h  GraphAlgorithm.h  JohnsonAlgorithm.h
solution/src/: AStarAlgorithm.cpp  BellmanFordAlgorithm.cpp  BiDijkstraAlgorithm.cpp  BruteForceAlgorithm.cpp  DijkstraAlgorithm.cpp  Graph.cpp  JohnsonAlgorithm.cpp
solution/test/: comparing_test.cpp  doctest_main.cpp  test_astar.cpp  test_bellmanford.cpp  test_bidijkstra.cpp  test_brutforce.cpp  test_dijkstra.cpp  test_graph.cpp  test_johnson.cpp
specification/: requirements.md  test_plan.md
